--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -49,16 +49,9 @@
 
   <img src="img.jpeg" alt="bg" id="bg">
   <div class="hello" style="line-height: 1.2;">
-    Summer Collection<br><br>
+    Special Collection<br><br>
     <div class="lorem">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-      Nostrum explicabo odit unde ad, ipsam delectus
-      hic sint officiis accusantium tenetur et, eum, consequatur
-      perspiciatis cum molestias dolor dicta aperiam consequuntur!
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-      asperiores nesciunt illo dolorem hic. Iure, vel impedit!
-      Molestias aliquam, doloremque ut ipsum, sequi quibusdam
-      tempora, autem vitae asperiores laborum aperiam?
+      There are many benefits of shopping online. You can take your time and look at different options to find exactly what you want. It's easy to compare prices online and find exactly what you are looking for. And now with Meesho, you can shop for anything you want at the lowest prices in the market. Even if you want to shop for cool gifts for your friends and family, there are many options that you can find on the Internet.
     </div>
   </div>
   <div class="offer">
@@ -73,7 +66,7 @@
       <h3 style="color: yellow;">+&#x20B9;1000 OFF*</h3>
     </div>
   </div>
-  <div id="gallery">
+  <!--<div id="gallery">
   <div class="hii">
     Our Gallery
   </div>
@@ -88,8 +81,19 @@
   <img src="glasses.jpeg" id="glasses">
   <br>
   <img src="bag.jpeg" id="bag">
+</div> -->  
+<div class="hii">
+  Our Gallery
 </div>
-  <div class="blue">
+<div class="grid-container3">
+  <div class="grid-item3"><img src="shoes.jpeg" id="shoes"></div>
+  <div class="grid-item3"><img src="denim.jpeg" id="denim"></div>
+  <div class="grid-item3"><img src="shirt1.jpeg" id="shirt"></div>  
+  <div class="grid-item3"><img src="one-piece.jpeg" id="dress"></div>
+  <div class="grid-item3"><img src="glasses.jpeg" id="glasses"></div>
+  <div class="grid-item3"><img src="bag.jpeg" id="bag"></div>  
+</div>
+<div class="blue">
     <img src="people.jpeg" id="people">
     <div class="hey">
       WE OFFER BRAND NEW STYLE
@@ -278,7 +282,9 @@
                   <div class="col-lg-3 col-md-6">
                       <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
                           <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-                          <p>Don’t miss any updates of our new templates and extensions.!</p>
+                          <p>Expert Computer Education
+                            <a href="https://expertcomputereducation.in/" class="HlWMPX2">https://expertcomputereducation.in/</a>
+                          </p>
                           <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
                               <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
                               <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
@@ -289,14 +295,15 @@
                   </div>
                   <div class="col-lg-3 col-md-6">
                       <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                          <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                          <h3 class="f-title f_600 t_color f_size_18">Address</h3>
                           <ul class="list-unstyled f_list">
-                              <li><a href="#">Company</a></li>
-                              <li><a href="#">Android App</a></li>
-                              <li><a href="#">ios App</a></li>
-                              <li><a href="#">Desktop</a></li>
-                              <li><a href="#">Projects</a></li>
-                              <li><a href="#">My tasks</a></li>
+                              <li>Expert Computer Education,<br>
+                                website-<a href="https://expertcomputereducation.in/" class="HlWMPX">https://expertcomputereducation.in/</a>
+                                Shop no-3,<br>
+                                Green park building,<br>
+                                Khau Gali, Shanti park,<br>
+                                Mira road, Thane,<br>
+                                Maharashtra 401107<br></li>
                           </ul>
                       </div>
                   </div>
@@ -306,10 +313,10 @@
                           <ul class="list-unstyled f_list">
                               <li><a href="#">FAQ</a></li>
                               <li><a href="#">Term &amp; conditions</a></li>
-                              <li><a href="#">Reporting</a></li>
-                              <li><a href="#">Documentation</a></li>
-                              <li><a href="#">Support Policy</a></li>
-                              <li><a href="#">Privacy</a></li>
+                              <li><a href="#">Payments</a></li>
+                              <li><a href="#">Shipping</a></li>
+                              <li><a href="#">Cancellation & Returns</a></li>
+                              <li><a href="#">Report</a></li>
                           </ul>
                       </div>
                   </div>
@@ -335,10 +342,10 @@
           <div class="container">
               <div class="row align-items-center">
                   <div class="col-lg-6 col-sm-7">
-                      <p class="mb-0 f_400">© cakecounter Inc.. 2019 All rights reserved.</p>
+                      
                   </div>
                   <div class="col-lg-6 col-sm-5 text-right">
-                      <p>Made with <i class="icon_heart"></i> in <a href="http://cakecounter.com" target="_blank">CakeCounter</a></p>
+                     
                   </div>
               </div>
           </div>
