--- a/index.html
+++ b/index.html
@@ -112,8 +112,36 @@
   <div class="omg" style="background-color: rgb(253, 249, 242); margin-bottom: 10px;">
     <div class="hii">
       Products type</div>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <img src="men.jpeg" id="men">
+          <button id="shop">Shop</button>
+          </div>
+          <div class="col">
+            <img src="women.jpeg" id="women">
+          <button id="shop1">Shop</button>
+          </div>
+          <div class="col">
+            <img src="kids.jpeg" id="kids">
+          <button id="shop2">Shop</button>
+          </div>
+        </div>
+      </div>
+     <!-- <div class="grid-container3">
+        <div class="grid-item4"><img src="men.jpeg" id="men">
+          <button id="shop">Shop</button>
+        </div>
+        <div class="grid-item4"><img src="women.jpeg" id="women">
+          <button id="shop1">Shop</button>
+        </div>
+        <div class="grid-item4"><img src="kids.jpeg" id="kids">
+          <button id="shop2">Shop</button>
+        </div>  
+         
+      </div>-->
 
-    <img src="men.jpeg" id="men">
+    <!--<img src="men.jpeg" id="men">
 
     <img src="women.jpeg" id="women">
 
@@ -121,7 +149,7 @@
 
     <button id="shop">shop</button>
     <button id="shop1">shop</button>
-    <button id="shop2">shop</button>
+    <button id="shop2">shop</button>-->
   </div>
   <div class="hiii">
     Featured products
