--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>FASHION SHOP</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="home.CSS">
@@ -19,7 +19,9 @@
 </head>
 
 <body>
-
+<script>
+alert('Please open this website at desktop mode')
+</script>
 
   <header class="header">
 
@@ -249,7 +251,7 @@
                 <div class="col-sm-12 col-md-6">
                   <h6>About</h6>
                   
-                  <p class="text-justify">Fashion Shop is an initiative to help the upcoming programmers with the code. Fashion Shop website is made by Sanchita Salokhe</p>
+                  <p class="text-justify">Fashion Shop is a demo of online shopping website. Fashion Shop website is made by Sanchita Salokhe</p>
                 <br>
                   <h6>Address</h6>
                   <p class="text-justify">Expert Computer Education,<br>
